objects/Customer_Satisfaction_Improvement__c.object
<CustomObject>
    <fields>
        <fullName>Area_of_improvement__c</fullName>
        <label>Area of improvement</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New Technology</fullName>
                </value>
                <value>
                    <fullName>New Product</fullName>
                </value>
                <value>
                    <fullName>Yield Performance</fullName>
                </value>
                <value>
                    <fullName>Quality</fullName>
                </value>
                <value>
                    <fullName>Capacity</fullName>
                </value>
                <value>
                    <fullName>Delivery</fullName>
                </value>
                <value>
                    <fullName>Customer Service</fullName>
                </value>
                <value>
                    <fullName>Pricing</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Assigneee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigneee</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Satisfaction_Improvements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Satisfaction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Satisfaction</label>
        <referenceTo>Customer_Satsfaction__c</referenceTo>
        <relationshipLabel>Satisfaction Improvements</relationshipLabel>
        <relationshipName>Satisfaction_Improvements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Site__c</fullName>
        <label>Site</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Regional_Site</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status_Update__c</fullName>
        <label>Status Update</label>
        <length>1000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Subject</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_Completion_Date__c</fullName>
        <label>Target Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Task__c</fullName>
        <label>Task</label>
        <length>1000</length>
        <type>Html</type>
    </fields>
    <label>Customer Satisfaction Improvement</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Area_of_improvement__c</columns>
        <columns>Status__c</columns>
        <columns>Status_Update__c</columns>
        <columns>Subject__c</columns>
        <columns>Target_Completion_Date__c</columns>
        <columns>Task__c</columns>
        <columns>Assigneee__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>CSI-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Satisfaction Improvements</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>